// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive-transactions (provider=cockroachdb) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=('1') already exists.\`"
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=cockroachdb) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=cockroachdb, js_pg_cockroachdb) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`duplicate key value violates unique constraint "User_pkey"\`"
`;

exports[`interactive-transactions (provider=cockroachdb, js_pg_cockroachdb) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=cockroachdb, js_pg_cockroachdb) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=cockroachdb, js_pg_cockroachdb) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=mongodb) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mongodb) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mongodb) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`Duplicate entry '1' for key 'user.PRIMARY'\`"
`;

exports[`interactive-transactions (provider=mysql) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_mariadb) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`Duplicate entry '1' for key 'user.PRIMARY'\`"
`;

exports[`interactive-transactions (provider=mysql, js_mariadb) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_mariadb) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_mariadb) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry '1' for key 'User.PRIMARY'\`"
`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, js_planetscale) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, qpe=remote) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`Duplicate entry '1' for key 'user.PRIMARY'\`"
`;

exports[`interactive-transactions (provider=mysql, qpe=remote) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, qpe=remote) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=mysql, qpe=remote) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`interactive-transactions (provider=postgresql) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=(1) already exists.\`"
`;

exports[`interactive-transactions (provider=postgresql) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`duplicate key value violates unique constraint "User_pkey"\`"
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_neon) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`duplicate key value violates unique constraint "User_pkey"\`"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, qpe=remote) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`duplicate key value violates unique constraint "User_pkey"\`"
`;

exports[`interactive-transactions (provider=postgresql, qpe=remote) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, qpe=remote) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=postgresql, qpe=remote) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2067\`. Message: \`UNIQUE constraint failed: User.email\`"
`;

exports[`interactive-transactions (provider=sqlite) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_better_sqlite3) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`SQLITE_CONSTRAINT_UNIQUE\`. Message: \`UNIQUE constraint failed: User.email\`"
`;

exports[`interactive-transactions (provider=sqlite, js_better_sqlite3) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_better_sqlite3) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_better_sqlite3) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_libsql) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`N/A\`. Message: \`Unique constraint failed: (email)\`"
`;

exports[`interactive-transactions (provider=sqlite, js_libsql) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_libsql) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlite, js_libsql) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`interactive-transactions (provider=sqlserver) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2627\`. Message: \`Violation of PRIMARY KEY constraint 'User_pkey'. Cannot insert duplicate key in object 'dbo.User'. The duplicate key value is (1).\`"
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`interactive-transactions (provider=sqlserver) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`interactive-transactions (provider=sqlserver, js_mssql) batching raw rollback 1`] = `
"
Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`EREQUEST\`. Message: \`Violation of PRIMARY KEY constraint 'User_pkey'. Cannot insert duplicate key in object 'dbo.User'. The duplicate key value is (1).\`"
`;

exports[`interactive-transactions (provider=sqlserver, js_mssql) batching rollback 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`interactive-transactions (provider=sqlserver, js_mssql) batching rollback within callback 1`] = `
"
Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`interactive-transactions (provider=sqlserver, js_mssql) rollback query 1`] = `
"
Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;
